# Auto_Model_Recommendation

./: README.md  docker-compose.yml
backend/: .coverage  .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  autorec.db  pyproject.toml
backend/app/: main.py
backend/app/api/middleware/: error_handler.py
backend/app/api/v1/: dependencies.py  router.py
backend/app/api/v1/routes/: datasets.py  experiments.py  health.py  preprocessing.py  training.py
backend/app/application/dto/: dataset_dto.py
backend/app/core/: config.py  constants.py  logging.py  recommendation_config.py
backend/app/domain/entities/: dataset.py  experiment.py  model_result.py
backend/app/domain/exceptions/: domain_exceptions.py
backend/app/domain/value_objects/: feature_type.py  metric.py  task_type.py
backend/app/infrastructure/database/: session.py
backend/app/infrastructure/services/: analysis_background_service.py  training_background_service.py
backend/app/infrastructure/storage/: local_storage.py
backend/autorec_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py
backend/tests/integration/: test_api.py  test_api_extended.py
backend/tests/unit/domain/: test_domain_entities.py  test_entities.py
backend/tests/unit/infrastructure/: test_database_repositories.py  test_ml_engines.py  test_ml_training_and_explainability.py  test_storage_and_session.py
backend/uploads/experiments/0aa9ca96-3435-498d-9bdd-1fd6de865307/: preprocessed_data.pkl
backend/uploads/experiments/e3e503df-e9c6-4c0b-b8f9-ce1708a58706/: preprocessed_data.pkl
backend/uploads/experiments/ea7870b3-2122-48db-8e74-e117cab7462e/: preprocessed_data.pkl
backend/uploads/uploads/: preview.csv  roundtrip.csv  test.csv
(+195 files in other folders)
