[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autorec-backend"
version = "1.0.0"
description = "AutoRec - Intelligent ML Model Recommendation Platform with automated model selection and CI/CD"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "pydantic==2.7.4",
    "pydantic-settings==2.3.4",
    "sqlalchemy==2.0.31",
    "alembic==1.13.2",
    "aiosqlite==0.20.0",
    "greenlet==3.0.3",
    "structlog==24.2.0",
    "python-multipart==0.0.9",
    "pandas==2.2.2",
    "numpy==1.26.4",
    "scikit-learn==1.5.0",
    "xgboost==2.0.3",
    "shap==0.45.1",
    "openpyxl==3.1.5",
    "reportlab==4.2.2",
    "slowapi==0.1.9",
    "httpx==0.27.0",
    "python-jose[cryptography]==3.3.0",
    "aiofiles==23.2.1",
    "imbalanced-learn==0.12.3",
    "scipy==1.13.1",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["uploads*", "tests*", "htmlcov*"]

[project.optional-dependencies]
dev = [
    "pytest==8.2.2",
    "pytest-asyncio==0.23.7",
    "pytest-cov==5.0.0",
    "httpx==0.27.0",
    "factory-boy==3.3.0",
    "faker==25.9.1",
    "ruff",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=app --cov-report=term-missing --cov-report=html"

[tool.coverage.run]
source = ["app"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
fail_under = 70

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
